linked css and html and fixed spacing of dropdown menu

--- a/Mock-Up 1.css
+++ b/Mock-Up 1.css
@@ -40,19 +40,17 @@ a{
   grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
   grid-auto-rows: 1fr;
   grid-gap: 20px;
-
-
   background-color: rgb(52, 54, 68);
-  margin-bottom: 1em;
   padding-top: 1em;
   padding-bottom: 1em;
   justify-items: center;
   align-items: center;
   text-align: center;
-  z-index: 2;
+  z-index: 1;
 }
 
 .menu_item a{
+  padding-bottom: 20px;
   text-align: center;
   font-weight: 600;
 }
@@ -70,16 +68,14 @@ a:hover {
   background: rgba(105, 102, 102, 0.8);
   padding-right: 4em;
   padding-bottom: 1em;
-  padding-top: 1em;
+  margin-top: 1em;
   padding-left: 1em;
   border-radius: 0px 0px 10px 10px;
   text-align: initial;
 }
 
 .student_material a{
-  
-
-  font-weight: normal;
+  font-weight: 400;
 }
 
 #student_materials:hover .student_material{
